kubernetes/apps/tier-2-applications/actions-runner-controller/app/metrics-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: actions-runner-controller-metrics
  labels:
    app.kubernetes.io/name: actions-runner-controller-metrics
spec:
  selector:
    app.kubernetes.io/component: controller-manager
    app.kubernetes.io/instance: actions-runner-controller
    app.kubernetes.io/name: gha-rs-controller
  ports:
    - name: metrics
      port: 8080
      protocol: TCP
      targetPort: metrics
